# erl_geometry_ros

./: .gitignore  CMakeLists.txt  README.md  erl_geometry_ros.repos  package.xml
docker/ros-humble/: Dockerfile
docker/ros-noetic/: Dockerfile  build.bash
launch/: README.md  cow_and_lady.launch  cow_and_lady_launch.py  gazebo_room_2d.launch  gazebo_room_2d.launch.py  gazebo_room_2d_launch.py  house_expo_2d.launch  house_expo_2d.launch.py  house_expo_2d_launch.py  test_rviz_plugin_better_point_cloud2_display.launch  test_rviz_plugin_occupancy_tree_display.launch
rviz/: cow_and_lady.rviz  gazebo_room_2d.rviz  house_expo_2d.rviz
rviz2/: cow_and_lady.rviz  gazebo_room_2d.rviz  house_expo_2d.rviz
src/ros1/: gazebo_room_2d_node.cpp  get_lidar_info_from_point_cloud.cpp  house_expo_2d_node.cpp  occupancy_tree_frontier_extraction_node.cpp  point_cloud_node.cpp  point_cloud_transform_node.cpp  ros.cmake
src/ros2/: gazebo_room_2d_node.cpp  get_lidar_info_from_point_cloud.cpp  house_expo_2d_node.cpp  occupancy_tree_frontier_extraction_node.cpp  point_cloud_node.cpp  point_cloud_transform_node.cpp  ros.cmake
test/ros1/: test_rviz_plugin_better_point_cloud2_display.cpp  test_rviz_plugin_occupancy_tree_display.cpp
