<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>erl_geometry_ros</name>
    <version>0.2.0</version>
    <description>erl_geometry_ros is a ROS package of erl_geometry.</description>
    <author email="daizhirui@hotmail.com">Zhirui Dai</author>
    <maintainer email="daizhirui@hotmail.com">Zhirui Dai</maintainer>
    <license>MIT</license>
    <url type="repository">https://github.com/ExistentialRobotics/erl_geometry_ros.git</url>

    <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
    <buildtool_depend>erl_cmake_tools</buildtool_depend>    <!-- required -->

    <depend condition="$ROS_VERSION == 1">roscpp</depend>
    <depend condition="$ROS_VERSION == 2">rclcpp</depend>

    <!-- common ROS dependencies -->
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2_ros</depend>

    <!-- ERL dependencies -->
    <depend>erl_common</depend>
    <depend>erl_covariance</depend>
    <depend>erl_geometry</depend>

    <export>
        <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    </export>

</package>
